# tauri-tldraw-annotate

./: .gitignore  README.md  SIGNING.md  build.sh  index.html  package-lock.json  package.json  vite.config.ts
.claude/: settings.local.json
.claude/skills/release-pipeline/: SKILL.md
curate-draw/: package-lock.json  package.json
curate-draw/src/: App.css  App.tsx  main.tsx
curate-draw/src-tauri/: Cargo.toml  tauri.conf.json
curate-draw/src-tauri/src/: main.rs
scripts/: copy_release_to_downloads.py  publish-release.mjs
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: ScreenshotAnnotator.tsx
